--- a/src/page-home/index.html
+++ b/src/page-home/index.html
@@ -6,27 +6,47 @@
     <title>Frontend Mentor | Art gallery website</title>
 </head>
 <body>
-    Modern Art Gallery
+    <main>
+        <section class="section-hero">
+            <h1 class="hero-title">Modern <span>Art Gallery</span></h1>
+            <p class="hero-text">
+                The arts in the collection of the Modern Art Gallery all started
+                from a spark of inspiration. Will these pieces inspire you? Visit
+                us and find out.
+            </p>
+            <a href="./location.html" class="hero-location-link">Our location</a>
+        </section>
 
-    The arts in the collection of the Modern Art Gallery all started 
-    from a spark of inspiration. Will these pieces inspire you? Visit 
-    us and find out.
+        <div class="overview page-wrapper">
 
-    Our location
+            <section class="section-activities">
+                <h2 class="overview-title">Your day at the gallery</h2>
+                <p class="overview-text">
+                    Wander through our distinct collections and find new insights about
+                    our artists. Dive into the details of their creative process.
+                </p>
+            </section>
 
-    Your day at the gallery
+            <section class="section-visit">
+                <h2 class="overview-title">Come &amp; be inspired</h2>
+                <p class="overview-text">
+                    We're excited to welcome you to our gallery and see how our collections
+                    influence you.
+                </p>
+            </section>
 
-    Wander through our distinct collections and find new insights about 
-    our artists. Dive into the details of their creative process.
+        </div>
 
-    Come &amp; be inspired
+    </main>
 
-    We're excited to welcome you to our gallery and see how our collections 
-    influence you.
-
-    Modern Art Gallery
-
-    The Modern Art Gallery is free to all visitors and open seven days a week 
-    from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+    <footer>
+        <div class="page-wrapper">
+            <h3 class="footer-title">Modern Art Gallery</h3>
+            <p class="footer-text">
+                The Modern Art Gallery is free to all visitors and open seven days a week
+                from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
