--- a/src/page-location/location.html
+++ b/src/page-location/location.html
@@ -6,22 +6,38 @@
     <title>Frontend Mentor | Art gallery website</title>
 </head>
 <body>
-    Back to Home
+    
+    <main>
+        <section class="section-map">
+            <a href="#" onclick="history.go(-1)">Back to Home</a>
+        </section>
+        <section class="section-address">
+            <div class="page-wrapper">
+                <h2 class="address-title">Our location</h2>
+                <address>
+                    <span class="street">99 King Street</span>
+                    Newport
+                    RI 02840
+                    United States of America
+                </address>
+                <p class="address-overview">
+                    Our newly opened gallery is located near the Edward King House on 99 King
+                    Street, the Modern Art Gallery is free to all visitors and open seven days
+                    a week from 8am to 9pm.
+                </p>
+            </div>
+        </section>
+    </main>
 
-    Our location
+    <footer>
+        <div class="page-wrapper">
+            <h3 class="footer-title">Modern Art Gallery</h3>
+            <p class="footer-text">
+                The Modern Art Gallery is free to all visitors and open seven days a week
+                from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+            </p>
+        </div>
+    </footer>
 
-    99 King Street
-    Newport
-    RI 02840
-    United States of America
-
-    Our newly opened gallery is located near the Edward King House on 99 King 
-    Street, the Modern Art Gallery is free to all visitors and open seven days 
-    a week from 8am to 9pm.
-
-    Modern Art Gallery
-
-    The Modern Art Gallery is free to all visitors and open seven days a week 
-    from 8am to 9pm. Find us at 99 King Street, Newport, USA.
 </body>
 </html>
