--- a/src/page-location/location.html
+++ b/src/page-location/location.html
@@ -10,6 +10,7 @@
     <main>
         <section class="section-map">
             <a href="#" onclick="history.go(-1)">Back to Home</a>
+            <div class="lazy-img" id="map-img-container"></div>
         </section>
         <section class="section-address">
             <div class="page-wrapper">
