--- a/src/page-home/index.html
+++ b/src/page-home/index.html
@@ -8,6 +8,7 @@
 <body>
     <main>
         <section class="section-hero">
+            <div class="lazy-img" id="hero-img-container"></div>
             <h1 class="hero-title">Modern <span>Art Gallery</span></h1>
             <p class="hero-text">
                 The arts in the collection of the Modern Art Gallery all started
@@ -17,22 +18,29 @@
             <a href="./location.html" class="hero-location-link">Our location</a>
         </section>
 
-        <div class="overview page-wrapper">
+        <div class="overview-container page-wrapper">
 
             <section class="section-activities">
-                <h2 class="overview-title">Your day at the gallery</h2>
-                <p class="overview-text">
-                    Wander through our distinct collections and find new insights about
-                    our artists. Dive into the details of their creative process.
-                </p>
+                <div class="lazy-img" id="activities-img-container"></div>
+                <div class="activities-text-container">
+                    <h2 class="overview-title">Your day at the gallery</h2>
+                    <p class="overview-text">
+                        Wander through our distinct collections and find new insights about
+                        our artists. Dive into the details of their creative process.
+                    </p>
+                </div>
             </section>
 
             <section class="section-visit">
-                <h2 class="overview-title">Come &amp; be inspired</h2>
-                <p class="overview-text">
-                    We're excited to welcome you to our gallery and see how our collections
-                    influence you.
-                </p>
+                <div class="lazy-img" id="visit-img1-container"></div>
+                <div class="lazy-img" id="visit-img2-container"></div>
+                <div class="visit-text-container">
+                    <h2 class="overview-title">Come &amp; be inspired</h2>
+                    <p class="overview-text">
+                        We're excited to welcome you to our gallery and see how our collections
+                        influence you.
+                    </p>
+                </div>
             </section>
 
         </div>
