--- a/src/page-home/index.html
+++ b/src/page-home/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | Art gallery website</title>
 </head>
-<body>
+<body class="body-m">
     <main>
         <section class="section-hero">
             <div class="lazy-img" id="hero-img-container"></div>
-            <h1 class="hero-title">Modern <span>Art Gallery</span></h1>
+            <h1 class="hero-title heading-xl">Modern<br/><span>Art Gallery</span></h1>
             <p class="hero-text">
                 The arts in the collection of the Modern Art Gallery all started
                 from a spark of inspiration. Will these pieces inspire you? Visit
@@ -23,7 +23,7 @@
             <section class="section-activities">
                 <div class="lazy-img" id="activities-img-container"></div>
                 <div class="activities-text-container">
-                    <h2 class="overview-title">Your day at the gallery</h2>
+                    <h2 class="overview-title heading-m">Your day at the gallery</h2>
                     <p class="overview-text">
                         Wander through our distinct collections and find new insights about
                         our artists. Dive into the details of their creative process.
@@ -35,7 +35,7 @@
                 <div class="lazy-img" id="visit-img1-container"></div>
                 <div class="lazy-img" id="visit-img2-container"></div>
                 <div class="visit-text-container">
-                    <h2 class="overview-title">Come &amp; be inspired</h2>
+                    <h2 class="overview-title heading-m">Come &amp; be inspired</h2>
                     <p class="overview-text">
                         We're excited to welcome you to our gallery and see how our collections
                         influence you.
@@ -50,7 +50,7 @@
     <footer>
         <div class="page-wrapper">
             <h3 class="footer-title">Modern Art Gallery</h3>
-            <p class="footer-text">
+            <p class="footer-text body-s">
                 The Modern Art Gallery is free to all visitors and open seven days a week
                 from 8am to 9pm. Find us at 99 King Street, Newport, USA.
             </p>
