--- a/src/page-location/location.html
+++ b/src/page-location/location.html
@@ -14,9 +14,9 @@
         </section>
         <section class="section-address">
             <div class="page-wrapper">
-                <h2 class="address-title">Our location</h2>
+                <h2 class="address-title heading-l">Our location</h2>
                 <address>
-                    <span class="street">99 King Street</span>
+                    <span class="street heading-s">99 King Street</span>
                     Newport
                     RI 02840
                     United States of America
