Add home page tablet styles

--- a/src/page-home/index.html
+++ b/src/page-home/index.html
@@ -26,7 +26,7 @@
         <div class="overview-container page-wrapper">
 
             <section class="section-activities wrapper-item">
-                <div class="lazy-img" id="activities-img-container"></div>
+                <div class="lazy-img overview-img-1" id="activities-img-container"></div>
                 <div class="activities-text-container">
                     <h2 class="overview-title heading-m">Your day at the gallery</h2>
                     <p class="overview-text">
@@ -37,8 +37,8 @@
             </section>
 
             <section class="section-visit wrapper-item">
-                <div class="lazy-img" id="visit-img1-container"></div>
-                <div class="lazy-img" id="visit-img2-container"></div>
+                <div class="lazy-img overview-img-2" id="visit-img1-container"></div>
+                <div class="lazy-img overview-img-3" id="visit-img2-container"></div>
                 <div class="visit-text-container">
                     <h2 class="overview-title heading-m">Come &amp; be inspired</h2>
                     <p class="overview-text">
@@ -53,14 +53,14 @@
     </main>
 
     <footer>
-        <div class="page-wrapper">
-            <img src="" alt="Modern Art Gallery logo" class="footer-logo wrapper-item" id="footer-logo">
-            <p class="footer-text body-s wrapper-item">
+        <div class="footer-wrapper">
+            <img src="" alt="Modern Art Gallery logo" class="footer-logo" id="footer-logo">
+            <p class="footer-text body-s">
                 The Modern Art Gallery is free to all visitors and open seven days a week
                 from 8am to 9pm. Find us at 99 King Street, Newport, USA.
             </p>
 
-            <div class="social-links wrapper-item">
+            <div class="social-links">
                 <a href="#" aria-label="Facebook" class="social-link">
                     <svg 
                         aria-hidden="true"
