Add home page desktop styles

--- a/src/page-home/index.html
+++ b/src/page-home/index.html
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-        <div class="footer-wrapper">
+        <div class="page-wrapper">
             <img src="" alt="Modern Art Gallery logo" class="footer-logo" id="footer-logo">
             <p class="footer-text body-s">
                 The Modern Art Gallery is free to all visitors and open seven days a week
