Add location page style

--- a/src/page-location/location.html
+++ b/src/page-location/location.html
@@ -18,14 +18,14 @@
 
         <section class="section-address page-wrapper">
             <h2 class="address-title heading-l wrapper-item">Our location</h2>
-            <div class="wrapper-item">
-                <address>
-                    <span class="street heading-s">99 King Street</span>
-                    Newport
-                    RI 02840
+            <div class="address-container wrapper-item">
+                <address class="body-m">
+                    <span class="street heading-s">99 King Street</span><br/>
+                    Newport<br/>
+                    RI 02840<br/>
                     United States of America
                 </address>
-                <p class="address-overview">
+                <p class="address-overview body-m">
                     Our newly opened gallery is located near the Edward King House on 99 King
                     Street, the Modern Art Gallery is free to all visitors and open seven days
                     a week from 8am to 9pm.
