Run build and fix favicon conflict

--- a/src/page-location/location.html
+++ b/src/page-location/location.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon-32x32.png"><!-- generated via webpack on home page -->
     <title>Frontend Mentor | Art gallery website</title>
 </head>
 <body>
